removing 'BETA' tag from SCP

--- a/public/404.html
+++ b/public/404.html
@@ -96,7 +96,7 @@
         <span class="icon-bar"></span>
       </button>
       <a href="/single_cell" class="navbar-brand hidden-xs check-upload"><span class='fas fa-home'></span> Single Cell
-        Portal<sup class='text-danger'><small> BETA</small></sup></a>
+        Portal</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
