--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -79,7 +79,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="/single_cell" class="navbar-brand hidden-xs check-upload"><span class='fas fa-home'></span> Single Cell Portal<sup class='text-danger'><small> BETA</small></sup></a>
+    <a href="/single_cell" class="navbar-brand hidden-xs check-upload"><span class='fas fa-home'></span> Single Cell Portal</a>
   </div>
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav pull-right">
